--- a/src/App.css
+++ b/src/App.css
@@ -1,181 +1,172 @@
+@keyframes animbutton{
+  0%{
+    transform: scale(1);
+  }
+  100%{
+    transform: scale(1.2);
+  }
+}
+
+@keyframes cancelbutton{
+  0%{
+    transform: scale(1.2);
+  }
+  100%{
+    transform: scale(1);
+  }
+}
+
+@keyframes btn3{
+  0%{
+    transform: scaleX(1);
+  }
+  100%{
+    transform: scaleX(1.1);  
+    transform-origin: right; 
+  }
+}
+
+@keyframes cbtn3{
+  0%{
+    transform: scaleX(1.1);
+  }
+  100%{
+    transform: scaleX(1);
+    transform-origin: left;
+  }
+}
+
+.logo{
+  pointer-events: auto;
+  position: absolute;
+  top: .2%;
+  left: 5%;
+  scale: 50%;
+}
 .App {
   text-align: center;
 }
 
-.div1 {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  position: fixed;
-  top: 0;
+.backg{
+  pointer-events: auto;
+  position: absolute;
+  top: 0%;
+  transition: filter 0.3s ease;
+  overflow: hidden;
+  background: radial-gradient(circle at var(--x) var(--y), rgba(255, 105, 220, 0), transparent 100px);
+}
+
+.backg::before {
+  content: "";
+  position: absolute;
+  top: 0%;
   left: 0;
-  right: 0;
-  padding: 20px 5%;
-  background-color: none;
-  z-index: 1000;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(circle at var(--x) var(--y), rgba(255, 105, 220, 0), transparent 100px);
+  pointer-events: none;
+  transition: background 0.2s ease;
 }
 
-.divider{
+
+.backg:hover::before {
+  background: radial-gradient(circle at var(--x) var(--y), rgba(255, 105, 220, 0.3), transparent 100px);
+}
+
+
+
+.backb {
+  pointer-events: none;
+  position: fixed; /* Fixe le footer en bas de l'écran */
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.backbb {
+  width: auto;
+  max-width: 100%;
+  height: auto;
+  max-height: 100px; /* Ajustez la hauteur maximale selon vos besoins */
   display: block;
-  position: fixed;
-  top: 4%;
-  scale: 300%;
-  z-index: 998;
 }
 
-.App-logo {
-  height: 5vmin;
+
+
+
+
+.Button1{
   pointer-events: auto;
+  position: absolute;
   background: none;
   border: none;
+  left: 38%;
+  bottom: 8%;
+  animation: cancelbutton 1s forwards;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  @keyframes pulssse{
-    0%{
-      transform: scale(1.05);
-    }
-    100%{
-      transform: scale(1);
-      transform: rotate(1deg);
-    }
-  }
-
-  @keyframes pulsse {
-    0% {
-      transform: scale(1);
-    }
-    100% {
-      transform: scale(1.05);
-      transform: rotate(-3deg);
-      
-    }
-  }
-  @keyframes pls {
-    0% {
-      transform: scale(1);
-    }
-    100% {
-      transform: scale(1.05);
-    }
-  }
-  @keyframes ple {
-    0%{
-      transform: scale(1.05);
-    }
-    100%{
-      transform: scale(1);
-    }
-  }
-  .App-logo {
-    animation: pulssse;
-    animation-duration: 0.5s;
-
-  }
-
-
-  @keyframes pps {
-    0%{
-      transform: scale(1) translate(0%,0%);
-    }
-    100%{
-      transform: scale(4) translate(0%,40%);
-    }
-    
-  }
-
-  @keyframes ppss {
-    0%{
-      transform: scale(4) translate(0%,40%);
-    }
-    100%{
-      transform: scale(1) translate(0%,0%);
-    }
-  }
-
-
-
-  
-  .App-logo:hover {
-      animation: pulsse 0.5s forwards;
-  }
-  
+.Button1:hover{
+  animation: animbutton .7s forwards;
 }
 
-
-@keyframes dd{
-  0%{
-    opacity: 1;
-    transform: scaleY(3);
-    transform: scaleX(0);
-    transform-origin: left;
-  }
-  100%{
-    opacity: 1;
-    transform: scaleY(1);
-    transform: scaleX(1);
-    transform-origin: left;
-  } 
-}
-.d10{
-  opacity: 0;
-  position:fixed;
-  pointer-events:all;
-  transform: scale(1);
-  top: 2.25%;
-  right: 6.75%;
-  z-index:1010
-}
-
-
-
-
-
-.dR4{
+.Button2{
   pointer-events: auto;
-  border: none;
+  position: absolute;
   background: none;
-  animation: ple;
-  animation-duration: 0.5s;
-  animation: ppss 0.5s forwards;
+  border: none;
+  right: 38%;
+  bottom: 8%;
+  animation: cancelbutton .7s forwards;
 }
 
-.dR4:hover {
-  animation: pls 0.5s forwards;
-  animation: pps 1s forwards;
+.Button2:hover{
+  animation: animbutton .7s forwards;
 }
 
-.dR3{
+.btn{
   pointer-events: auto;
-  border: none;
+  position: absolute;
   background: none;
-  animation: ple;
-  animation-duration: 0.5s;
-  animation: ppss 0.5s forwards;
-}
-
-.dR3:hover {
-  animation: pls 0.5s forwards;
-  animation: pps 1s forwards;
-}
-
-.dR2{
-  opacity: 1;
-  pointer-events: all;
-  scale: 140%;
   border: none;
-  background: none;
-  animation: ple;
-  animation-duration: 0.5s;
+  top: 1.75%;
+  right: 18%;
+  scale: 70%;
+  animation: cbtn3 1s forwards;
 }
 
-.dR2:hover {
-  visibility: hidden;
+.btn:hover{
+  animation: btn3 1s forwards;
 }
 
-.dR2:hover .d10{
-  visibility: visible;
-  animation: dd 0.5s forwards;
+.txt{
+  z-index: 100;
+  transform: translateY(-85%);
+}
+
+.body{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  top: 0;
+}
+
+.line{
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.lin{
+  position: absolute;
+  top: 10%;
+  transform: scaleX(200%);
+
 }
 
 
