--- a/src/App.css
+++ b/src/App.css
@@ -77,8 +77,8 @@
 
 .backb {
   pointer-events: none;
-  position: fixed; /* Fixe le footer en bas de l'écran */
-  bottom: 0;
+  position: relative; 
+  bottom: 0%;
   left: 0;
   width: 100%;
   display: flex;
@@ -90,12 +90,9 @@
   width: auto;
   max-width: 100%;
   height: auto;
-  max-height: 100px; /* Ajustez la hauteur maximale selon vos besoins */
+  max-height: 100px; 
   display: block;
 }
-
-
-
 
 
 .Button1{
@@ -131,7 +128,7 @@
   position: absolute;
   background: none;
   border: none;
-  top: 1.75%;
+  top: 1%;
   right: 18%;
   scale: 70%;
   animation: cbtn3 1s forwards;
@@ -168,6 +165,74 @@
   transform: scaleX(200%);
 
 }
+
+.bouton{
+  pointer-events: auto;
+  background: none;
+  border: none;
+  position: absolute;
+  top: 3.5%;
+  left: 55%;
+}
+
+.bouton1{
+  pointer-events: auto;
+  background: none;
+  border: none;
+  position: absolute;
+  top: 3.5%;
+  left: 45%;
+}
+
+
+
+.animbo{
+  pointer-events: auto;
+  background: none;
+  border: none;
+  position: fixed;
+  opacity: 100%;
+  left: 35%;
+  scale: 30%;
+
+  animation: cancelanimation 1s forwards;
+}
+
+.animbo:hover{
+  animation: animbutton 1s forwards;
+  opacity: 100%;
+}
+
+.animboo-container {
+  position: relative;
+  display: inline-block;
+}
+
+.animboo {
+  pointer-events: none; /* Désactive les événements sur l'image SVG */
+  opacity: 10%;
+  position: fixed;
+  right: 26%;
+  animation: cancelanimation 1s forwards;
+}
+
+.clickable-top {
+  pointer-events: auto; /* Active les événements uniquement dans cette zone */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50%; /* Définit la hauteur de la zone cliquable supérieure */
+  background: transparent; /* Zone invisible mais réactive */
+}
+
+.animboo-container:hover .animboo { 
+  animation: animbutton 1s forwards;
+  opacity: 100%;
+}
+
+
+
 
 
 .App-header {
