--- a/src/App.css
+++ b/src/App.css
@@ -22,17 +22,42 @@
   }
   100%{
     transform: scaleX(1.1);  
-    transform-origin: right; 
+    transform-origin: left; 
   }
 }
 
 @keyframes cbtn3{
   0%{
     transform: scaleX(1.1);
+
   }
   100%{
     transform: scaleX(1);
-    transform-origin: left;
+    transform-origin: left; 
+  }
+}
+
+@keyframes ab{
+  0%{
+    opacity: 0%;
+    transform: scale(0);
+  }
+  100%{
+    opacity: 100%;
+    transform: scale(1);
+    transform-origin: top;
+  }
+}
+
+@keyframes cab{
+  0%{
+    opacity: 100%;
+    transform: scale(1);
+  }
+  100%{
+    opacity: 0%;
+    transform: scale(0);
+    transform-origin: top;
   }
 }
 
@@ -162,7 +187,8 @@
 .lin{
   position: absolute;
   top: 10%;
-  transform: scaleX(200%);
+  left: 0%;
+  transform: scale(0.989);
 
 }
 
@@ -171,8 +197,9 @@
   background: none;
   border: none;
   position: absolute;
-  top: 3.5%;
+  top: 4.75%;
   left: 55%;
+  z-index: 2;
 }
 
 .bouton1{
@@ -182,6 +209,7 @@
   position: absolute;
   top: 3.5%;
   left: 45%;
+  z-index: 1;
 }
 
 
@@ -191,15 +219,16 @@
   background: none;
   border: none;
   position: fixed;
-  opacity: 100%;
+  opacity: 0%;
   left: 35%;
   scale: 30%;
+  z-index: 0;
 
-  animation: cancelanimation 1s forwards;
+  animation: cab 1s forwards;
 }
 
 .animbo:hover{
-  animation: animbutton 1s forwards;
+  animation: ab 1s forwards;
   opacity: 100%;
 }
 
@@ -209,25 +238,28 @@
 }
 
 .animboo {
-  pointer-events: none; /* Désactive les événements sur l'image SVG */
+  pointer-events: none; 
   opacity: 10%;
   position: fixed;
-  right: 26%;
-  animation: cancelanimation 1s forwards;
+  right: 36.5%;
+  scale: 80%;
+  top: 4%;
+  z-index: 0;
+  animation: cab 1s forwards;
 }
 
 .clickable-top {
-  pointer-events: auto; /* Active les événements uniquement dans cette zone */
+  pointer-events: auto; 
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 50%; /* Définit la hauteur de la zone cliquable supérieure */
-  background: transparent; /* Zone invisible mais réactive */
+  height: 50%; 
+  background: transparent; 
 }
 
 .animboo-container:hover .animboo { 
-  animation: animbutton 1s forwards;
+  animation: ab 1s forwards;
   opacity: 100%;
 }
 
